# terrible-tree

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: python-package.yml
src/pytree/: __version__.py  pytree.py
src/terrible_tree/: __main__.py  icons.py  item.py  tree.py
src/treett/: __main__.py  icons.py  item.py  treett.py
